# xfce4-settings

./: .clang-format  .cppcheck-false-positives  .editorconfig  .gcc-analyzer-false-positives  .gitignore  .gitlab-ci.yml  .gitmodules  .scan-build-false-positives  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt  module.xml
common/: Makefile.am  debug.c  debug.h  display-name.c  display-profiles.c  display-profiles.h  edid-parse.c  edid.h  meson.build  xfce-randr.c  xfce-randr.h  xfce-shortcuts-grabber.c  xfce-shortcuts-grabber.h  xfce-wlr-output-manager.c  xfce-wlr-output-manager.h
common/resources/: accessibility-dialog.glade  appearance-dialog.glade  color-dialog.glade  confirmation-dialog.glade  display-dialog.glade  identity-popup.glade  keyboard-dialog.glade  minimal-display-dialog.glade  mouse-dialog.glade  profile-changed-dialog.glade  xfce4-settings.gresource.xml
dialogs/: Makefile.am  meson.build
dialogs/accessibility-settings/: Makefile.am  accessibility-dialog.glade  find-cursor.c  main.c  xfce4-accessibility-settings.desktop.in
dialogs/appearance-settings/: Makefile.am  appearance-dialog.glade  appearance-install-theme  images.h  main.c  valgrind-log  xfce-ui-settings.desktop.in  xfce4-appearance-settings.desktop.in
dialogs/color-settings/: Makefile.am  color-device.c  color-device.h  color-dialog.glade  color-profile.c  color-profile.h  main.c  xfce4-color-settings.desktop.in
dialogs/display-settings/: Makefile.am  confirmation-dialog.glade  display-dialog-xrandr1.2.glade  display-dialog.glade  display-name.c  display-settings-wayland.c  display-settings-wayland.h  display-settings-x11.c  display-settings-x11.h  display-settings.c  display-settings.h  edid-parse.c  edid.h  foo-marshal.c  foo-marshal.h  identity-popup.glade  main.c  meson.build  minimal-display-dialog.glade  profile-changed-dialog.glade  scrollarea.c  scrollarea.h  xfce-display-settings.desktop.in  xfce-randr-legacy.c  xfce-randr-legacy.h  xfce-randr.c  xfce-randr.h  xfce4-display-settings.desktop.in
dialogs/keyboard-settings/: Makefile.am  command-dialog.c  command-dialog.h  frap-shortcuts-dialog.c  frap-shortcuts-provider.c  frap-shortcuts.c  keyboard-dialog.glade  keyboard-dialog_glade.h  main.c  shortcut-dialog.c  shortcut-dialog.h  xfce-keyboard-settings.c  xfce-keyboard-settings.desktop.in  xfce-keyboard-settings.h  xfce4-keyboard-settings.desktop.in
dialogs/mime-settings/: .clang-format  Makefile.am  exo-helper-chooser-dialog.c  exo-helper-chooser-dialog.h  exo-helper-launcher-dialog.c  exo-helper-launcher-dialog.h  exo-helper.c  exo-helper.h  exo-preferred-applications.in  main.c  meson.build  xfce-mime-chooser.c  xfce-mime-chooser.h  xfce-mime-helper-chooser-dialog.c  xfce-mime-helper-chooser-dialog.h  xfce-mime-helper-chooser.c  xfce-mime-helper-chooser.h  xfce-mime-helper-enum-types.c  xfce-mime-helper-enum-types.h  xfce-mime-helper-launcher-dialog.c  xfce-mime-helper-launcher-dialog.h  xfce-mime-helper-main.c  xfce-mime-helper-utils.c  xfce-mime-helper-utils.h  xfce-mime-helper.c  xfce-mime-helper.h  xfce-mime-window.c  xfce-mime-window.h  xfce-mimeapps.list  xfce4-audio-player.desktop.in  xfce4-file-manager.desktop.in  xfce4-image-viewer.desktop.in  xfce4-mail-reader.desktop.in  xfce4-mime-settings.desktop.in  xfce4-terminal-emulator.desktop.in  xfce4-text-editor.desktop.in  xfce4-video-player.desktop.in  xfce4-web-browser.desktop.in
dialogs/mime-settings/exo-helper/: Makefile.am  exo-helper-1  exo-helper-2  exo-preferred-applications  main.c
dialogs/mouse-settings/: Makefile.am  main.c  mouse-dialog.glade  mouse-dialog.ui  xfce-mouse-settings.desktop.in  xfce4-mouse-settings.desktop.in
dialogs/user-settings/: Makefile.am  main.c  user-dialog.glade  xfce4-user-settings.desktop.in
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/scalable/: Makefile.am
po/: ChangeLog  LINGUAS  (+72 more)
protocols/: Makefile.am  meson.build
xfce4-settings-editor/: Makefile.am  main.c  main_window.c  main_window.h  meson.build  xfce-settings-cell-renderer.c  xfce-settings-cell-renderer.h  xfce-settings-editor-box.c  xfce-settings-editor-box.h  xfce-settings-editor-dialog.c  xfce-settings-editor-dialog.h  xfce-settings-prop-dialog.c  xfce-settings-prop-dialog.h  xfce4-settings-editor.desktop.in  xfce4-settings-editor.glade  xfce4-settings-editor.ui
xfce4-settings-helper/: Makefile.am  accessibility.c  accessibility.h  accessx.c  accessx.h  clipboard-manager.c  displays.c  displays.h  frap-shortcuts-provider.c  frap-shortcuts-provider.h  frap-shortcuts.c  gsd-clipboard-manager.c  gsd-clipboard-manager.h  keyboard-layout.c  keyboard-shortcuts.c  keyboard-shortcuts.h  keyboards.c  main.c  pointers.c  pointers.h  utils.c  utils.h  workspaces.c  workspaces.h  xfce-clipboard-manager.c  xfce-clipboard-manager.h  xfce4-settings-helper-autostart.desktop  xkb.c  xkb.h  xsettings.h  xsettings.xml
xfce4-settings-manager/: Makefile.am  README.md  main.c  meson.build  xfce-settings-manager-dialog.c  xfce-settings-manager-dialog.h  xfce-settings-manager.desktop.in  xfce-settings-manager.menu  xfce-text-renderer.c  xfce-text-renderer.h  xfce4-settings-manager.desktop.in  xfce4-settings-manager.pc.in
xfsettingsd/: Makefile.am  accessibility.c  accessibility.h  clipboard-manager.c  clipboard-manager.h  debug.c  debug.h  displays-upower.c  displays-upower.h  displays-wayland.c  displays-wayland.h  displays-x11.c  displays-x11.h  displays.c  displays.h  gtk-decorations.c  gtk-decorations.h  gtk-settings-exported.xml  gtk-settings-module.c  gtk-settings.c  gtk-settings.h  keyboard-layout.c  keyboard-layout.h  keyboard-shortcuts.c  keyboard-shortcuts.h  keyboards.c  keyboards.h  main.c  meson.build  pointers-defines.h  pointers.c  pointers.h  registry.c  registry.h  workspaces.c  workspaces.h  xfsettingsd-autostart.desktop  xfsettingsd.desktop.in  xsettings.c  xsettings.h  (+1 more)
(+95 files in other folders)
